fix(document analizer): move status update logic inside chunk processing loop

--- a/demo/document_analysis/index.html
+++ b/demo/document_analysis/index.html
@@ -19,14 +19,14 @@
         <form id="controls" class="controls">
           <label class="field">
             <span>Document Path</span>
-            <input id="doc-path" type="text" value="/data/books/war_and_peace.txt" />
+            <input id="doc-path" type="text" value="/data/books/metamorphosis.txt" />
           </label>
           <label class="field">
             <span>Document URL</span>
             <input
               id="doc-url"
               type="text"
-              value="https://www.gutenberg.org/cache/epub/2600/pg2600.txt"
+              value="https://www.gutenberg.org/cache/epub/5200/pg5200.txt"
             />
           </label>
           <label class="field">
@@ -34,7 +34,7 @@
             <input
               id="keywords"
               type="text"
-              value="Pierre,Natasha,Andrei,Prince,Count,said,asked,replied,war,battle"
+              value="father,mother,sister,room,door,work,office,manager,train,family"
             />
           </label>
           <label class="field">
