--- a/demo/document_analysis/index.html
+++ b/demo/document_analysis/index.html
@@ -88,6 +88,6 @@
       </section>
     </main>
 
-    <script src="app.js?v=1"></script>
+    <script type="module" src="app.js?v=3"></script>
   </body>
 </html>
